Fix font smoothing on firefox

--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,7 @@ body {
   margin: 0;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   color: $color-text-primary;
 }
 
